# prism

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  colors.py  diagnostic_tool.py  main.py  prism_advanced_sanity.py  prism_sanity_test.py  prism_torture_test.py  pyproject.toml  requirements.txt  secure_file_collection.py  self_unpack_test.py  test_file.py  test_sandbox.js  theory.md
broken_rules/: RAT_PoetRATPython.yar
core/: engine.py  report.py  scanner.py
parsers/: office_parser.py  pdf_parser.py  pe_parser.py
prism_adv_samples/: base64_blob.txt  clean.txt  embedded_pe.txt  macro_like.txt
prism_test_samples/: clean.txt  embedded_pe.txt  macro.docx
prism_torture_samples/: nested_encoded.txt  polyglot_bait.txt  powershell_decoy.txt  tiny_macro.txt
static_test_samples/: api_strings.txt  noise_strings.txt
