[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-triage"
version = "0.1.0"
description = "A multi-format static analysis framework for malware triage."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "yara-python",
    "requests",
    "python-dotenv",
    "urllib3",
    "pefile",
    "olefile",
    "oletools",
    "pypdf",
    "colorama",
    "pyyaml",
    "tqdm"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
    "Development Status :: 4 - Beta",
]

[project.scripts]

prism = "prism.main:main"

[project.urls]
"Homepage" = "https://github.com/guyvolvo/prism"
